# dungeon-rs

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  about.hbs  about.toml  branding.afdesign  cargo-mutants.toml  cliff.toml  clippy.toml  committed.toml  deny.toml  justfile  rust-toolchain.toml  rustfmt.toml  taplo.toml  typos.toml
.cargo/: config.toml  config_fast_build.toml
.config/: nextest.toml
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: 01-feature-request.yml  99-internal.yml  bug-report.yml  config.yml
.github/workflows/: ci.yaml  codeql.yml  dependencies.yaml  documentation.yaml  internal-issue-guard.yaml  new-contributors.yaml  release.yaml
assets/: index.rhai
crates/assets/: Cargo.toml  README.md
crates/assets/scripts/: filter.rhai  index.rhai
crates/assets/src/: lib.rs  library.rs  packs.rs  plugin.rs  reader.rs  scripting.rs
crates/assets/src/packs/: index.rs  thumbnails.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: commands.rs  main.rs  utilities.rs
crates/cli/src/commands/: assets.rs
crates/config/: Cargo.toml  README.md
crates/config/src/: configuration.rs  lib.rs  log_configuration.rs
crates/core/: Cargo.toml  README.md
crates/core/macros/: Cargo.toml  README.md
crates/core/src/: async_ecs.rs  lib.rs  plugin.rs
crates/core/tests/: async_ecs.rs
crates/data/: Cargo.toml  README.md
crates/data/src/: element.rs  layer.rs  level.rs  lib.rs  project.rs  query.rs
crates/drs-assets/: Cargo.toml
crates/drs-assets/scripts/: filter.rhai
crates/drs-assets/src/: lib.rs  library.rs  packs.rs  scripting.rs
crates/drs-assets/src/packs/: index.rs
crates/drs-cli/: Cargo.toml
crates/drs-cli/src/: main.rs  utilities.rs
crates/drs-cli/src/commands/: assets.rs
crates/drs-config/: Cargo.toml
crates/drs-config/src/: configuration.rs  log_configuration.rs
crates/drs-core/: Cargo.toml  README.md
crates/drs-core/src/: lib.rs  persistence.rs  plugin.rs  project.rs
crates/drs-core/src/persistence/: load_project.rs  save_project.rs
crates/drs-core/tests/: load_project_event.rs  save_project_event.rs
crates/drs-data/: Cargo.toml  README.md
crates/drs-data/src/: element.rs  layer.rs  level.rs  lib.rs  project.rs  query.rs
crates/drs-editor/: Cargo.toml
crates/drs-editor/src/: main.rs  panic.rs
crates/drs-i18n/: Cargo.toml
crates/drs-i18n/src/: lib.rs  macros.rs
crates/drs-io/: Cargo.toml  README.md
crates/drs-io/src/: document.rs  load_project.rs  save_project.rs
crates/drs-io/tests/: load_project_event.rs  save_project_event.rs
crates/drs-logging/: Cargo.toml
crates/drs-logging/src/: console.rs  lib.rs
crates/drs-serialization/: Cargo.toml
crates/drs-serialization/src/: deserialize.rs  lib.rs  serialize.rs
crates/drs-serialization/tests/: deserialize.rs  serialize.rs
crates/drs-ui/: Cargo.toml  README.md
crates/drs-ui/src/: camera.rs  layout.rs  lib.rs  mouse.rs  panels.rs  state.rs
crates/drs-ui/src/layout/: editor.rs  splash.rs
crates/drs-ui/src/widgets/: create_project_form.rs  toolbar.rs
crates/drs-utils/: Cargo.toml
crates/drs-utils/macros/: Cargo.toml  README.md
crates/drs-utils/macros/src/: linters.rs
crates/drs-utils/src/: async_ecs.rs  hash.rs  lib.rs  plugin.rs  version.rs
crates/drs-utils/tests/: async_ecs.rs
crates/editor/: Cargo.toml  README.md  build.rs
crates/editor/src/: main.rs  panic.rs
crates/i18n/: Cargo.toml  README.md
crates/i18n/src/: lib.rs  macros.rs  plugin.rs
crates/io/: Cargo.toml  README.md
crates/io/src/: document.rs  lib.rs  load_project.rs  plugin.rs  save_project.rs
crates/io/tests/: load_project_event.rs  save_project_event.rs
crates/logging/: Cargo.toml  README.md
crates/logging/src/: console.rs  lib.rs
crates/serialization/: Cargo.toml  README.md
crates/serialization/src/: deserialize.rs  error.rs  format.rs  lib.rs  serialize.rs
crates/serialization/tests/: deserialize.rs  serialize.rs
crates/ui/: Cargo.toml  README.md
crates/ui/src/: camera.rs  dialogs.rs  layout.rs  lib.rs  notifications.rs  panels.rs  plugin.rs  state.rs  widgets.rs
crates/ui/src/dialogs/: new_project.rs  open_project.rs
crates/ui/src/layout/: assets.rs  editor.rs  layers.rs  levels.rs  settings.rs  splash.rs  status_bar.rs  toolbar.rs
crates/ui/src/state/: new_map_state.rs
crates/ui/src/widgets/: create_project_form.rs  notifications.rs  status_bar.rs  toolbar.rs
crates/utils/: Cargo.toml  README.md
crates/utils/macros/: Cargo.toml  README.md
crates/utils/macros/src/: lib.rs  tracing.rs
crates/utils/macros/tests/: tracing.rs
crates/utils/src/: async_ecs.rs  directories.rs  lib.rs  logging.rs  pathbuf.rs
crates/utils/tests/: async_ecs.rs
docs/: book.toml
docs/src/: SUMMARY.md
docs/src/api/: index.md
locales/en-GB/: assets.ftl  dialogs.ftl  global.ftl  layout.ftl  widgets.ftl
src/: lib.rs  main.rs
src/camera_controls/: mod.rs  state.rs
src/debug/: mod.rs
src/theme/: colors.rs  mod.rs
src/theme/widgets/: button.rs  dialog.rs  mod.rs  toolbar.rs
src/ui/: mod.rs  new_map.rs  toolbar.rs
tools/ci/: Cargo.toml
tools/ci/src/: documented_features.rs  main.rs  missing_translations.rs  required_features.rs  translations.rs  validate_documented_features.rs  validate_features.rs  validate_required_features.rs  workspace_features.rs
tools/ci/src/translations/: extraction.rs  usage.rs
