[workspace]
resolver = "3"
members = [ "crates/data","crates/editor"]

[workspace.package]
edition = "2024"
version = "0.0.1"
license-file = "LICENSE"
readme = "README.md"
rust-version = "1.87.0"
authors = [
  "Wannes Gennar <info@dealloc.be>",
  "Amber Swevers <amber.swevers@hotmail.com>"
]
repository = "https://github.com/dealloc/dungeon_rs"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]

[workspace.dependencies]
bevy = { version = "0.16.0", default-features = false }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
