[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
version = "0.0.1"
license-file = "LICENSE"
readme = "README.md"
rust-version = "1.95.0"
publish = false
repository = "https://github.com/dungeon-rs/dungeon-rs"
authors = [
  "Wannes Gennar <info@dealloc.be>"
]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.rustdoc]
private_intra_doc_links = "allow"

[workspace.lints.clippy]
pedantic = "warn"
suspicious = "warn"
complexity = "warn"
missing_docs_in_private_items = "warn"
module_name_repetitions = "warn"
semicolon_if_nothing_returned = "warn"

[workspace.dependencies]
bevy = { version = "0.18.1", default-features = false, features = [] }

