[package]
name = "cli"
edition.workspace = true
repository.workspace = true
version.workspace = true
readme.workspace = true
authors.workspace = true
license-file.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
bevy = { workspace = true }
utils = { workspace = true }
assets = { workspace = true }
logging = { workspace = true, features = ["console"] }
config = { workspace = true }
clap = { version = "4.5.41", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.3", default-features = false, features = ["tracing"] }
anyhow = { workspace = true }

[lints]
workspace = true

[features]
default = []
dev = [
    "assets/dev",
    "config/dev",
    "logging/dev",
    "utils/dev"
]
