[package]
name = "core"
description = "Crate containing helpers, macros and utilities for use in all other crates"
edition.workspace = true
repository.workspace = true
version.workspace = true
readme.workspace = true
authors.workspace = true
license-file.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
core_macros = { path = "macros" }

[features]
default = []
dev = []
windows = []
linux = []
macos = []
