[package]
name = "drs-config"
description = "This crate handles the configuration of other crates"
edition.workspace = true
repository.workspace = true
version.workspace = true
readme.workspace = true
authors.workspace = true
license-file.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
utils = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
drs-serialization = { workspace = true }
bevy = { workspace = true }
semver = { workspace = true }

[features]
default = [
  "drs-serialization/toml"
]
dev = [
  "utils/dev",
  "drs-serialization/dev"
]