[package]
name = "drs-core"
description = "Core functionality of the editor that isn't tied specifically to the UI"
edition.workspace = true
repository.workspace = true
version.workspace = true
readme.workspace = true
authors.workspace = true
license-file.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]

[features]
default = []
dev = [
]
