[package]
name = "drs-core"
description = "Core functionality of the editor that isn't tied specifically to the UI"
edition.workspace = true
repository.workspace = true
version.workspace = true
readme.workspace = true
authors.workspace = true
license-file.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
bevy = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
drs-data = { workspace = true }
drs-serialization = { workspace = true }
drs-utils = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []

dev = [
    "drs-data/dev",
    "drs-serialization/dev",
    "drs-utils/dev"
]
