[package]
name = "drs-i18n"
edition.workspace = true
version.workspace = true
license-file.workspace = true
readme.workspace = true
rust-version.workspace = true
publish.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
bevy = { workspace = true }
drs-utils = { workspace = true }
anyhow = { workspace = true }
fluent-templates = { version = "0.13.1", features = ["walkdir"] }
sys-locale = "0.3.2"
unic-langid = "0.9.6"

[lints]
workspace = true

[features]
default = []
dev = [
    "drs-utils/dev"
]

