[package]
name = "drs-serialization"
description = "Handles the selection of serialization techniques and formats"
edition.workspace = true
repository.workspace = true
version.workspace = true
readme.workspace = true
authors.workspace = true
license-file.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
# JSON is the only format we enable by default.
serde_json = "1.0.145"
rmp-serde = { version = "1.3.0", optional = true }
toml = { version = "0.9.7", optional = true }

[features]
default = []
dev = []

# serialization formats
msgpack = ["dep:rmp-serde"]
toml = ["dep:toml"]
