[package]
name = "ui"
edition.workspace = true
repository.workspace = true
version.workspace = true
readme.workspace = true
authors.workspace = true
license-file.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
assets = { workspace = true }
utils = { workspace = true }
i18n = { workspace = true }
egui = { version = "0.31.1", default-features = false, features = ["mint", "accesskit", "rayon"] }
bevy_egui = { version = "0.35.0", default-features = false, features = ["render", "default_fonts"] }
bevy = { workspace = true, features = ["bevy_core_pipeline", "bevy_window", "bevy_winit"] }
egui_dock = "0.16.0"
egui-notify = "0.19.0"
rfd = { workspace = true }
egui_form = { version = "0.5.0", features = ["validator_garde"] }
garde = { version = "0.22.0", features = ["derive"] }

[features]
default = []
dev = [
  "assets/dev",
  "utils/dev",
  "i18n/dev",
  "egui/deadlock_detection",
  "egui/log"
]
