[package]
name = "ui"
edition.workspace = true
repository.workspace = true
version.workspace = true
readme.workspace = true
authors.workspace = true
license-file.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
assets = { workspace = true }
utils = { workspace = true }
i18n = { workspace = true }
egui = { version = "0.31.1", default-features = false, features = ["mint", "accesskit", "rayon"] }
bevy = { workspace = true, features = ["bevy_core_pipeline", "bevy_window", "bevy_winit"] }

[features]
default = []
dev = [
  "assets/dev",
  "utils/dev",
  "i18n/dev",
  "egui/deadlock_detection",
  "egui/log"
]
