[package]
name = "ui"
edition.workspace = true
repository.workspace = true
version.workspace = true
readme.workspace = true
authors.workspace = true
license-file.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
drs-assets = { workspace = true }
utils = { workspace = true }
i18n = { workspace = true }
data = { workspace = true }
io = { workspace = true }
egui = { version = "0.32.1", default-features = false, features = ["mint", "accesskit", "rayon"] }
bevy_egui = { version = "0.36.0", default-features = false, features = ["render", "default_fonts"] }
bevy = { workspace = true, features = ["bevy_core_pipeline", "bevy_window", "bevy_winit"] }
egui_dock = "0.17.0"
egui-notify = "0.20.0"
native-dialog = { workspace = true }
bevy-inspector-egui = { version = "0.33.1", optional = true, default-features = false, features = ["bevy_render"] }

[features]
default = []
dev = [
  "drs-assets/dev",
  "utils/dev",
  "i18n/dev",
  "data/dev",
  "io/dev",
  "egui/deadlock_detection",
  "egui/log",
  "egui/callstack",
  "dep:bevy-inspector-egui"
]
