[package]
name = "utils"
description = "Crate containing helpers, macros and utilities for use in all other crates"
edition.workspace = true
repository.workspace = true
version.workspace = true
readme.workspace = true
authors.workspace = true
license-file.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
bevy = { workspace = true }
utils_macros = { path = "macros" }
crossbeam-channel = "0.5.15"
semver = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
known-folders = "1.2.0"

[target.'cfg(target_os = "linux")'.dependencies]
microxdg = { version = "0.2.0", default-features = false }

[features]
default = []
dev = []
windows = []
linux = []
macos = []

