[package]
name = "utils"
description = "Crate containing helpers, macros and utilities for use in all other crates"
edition.workspace = true
repository.workspace = true
version.workspace = true
readme.workspace = true
authors.workspace = true
license-file.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
bevy = { workspace = true }
utils_macros = { path = "macros" }
crossbeam-channel = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }
tracing-indicatif = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
known-folders = "1.3.1"

[features]
default = [
  "bevy/async_executor",
  "bevy/multi_threaded"
]
dev = [
    "utils_macros/dev"
]

