[package]
name = "ci"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
cargo_metadata = "0.20.0"
clap = { version = "4.5.39", features = ["derive"] }
cli-colors = "1.0.0"
cli-table = "0.5.0"
strum = { version = "0.27.1", features = ["derive"] }
syn = { version = "2.0.104", features = ["full", "visit"] }
walkdir = "2.5.0"
proc-macro2 = "1.0.95"
fluent = "0.17.0"
fluent-syntax = "0.12.0"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 0
