[package]
name = "utils_macros"
description = "Contains macros for the `utils` crate"
edition.workspace = true
repository.workspace = true
version.workspace = true
readme.workspace = true
authors.workspace = true
license-file.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
quote = "1.0.40"
syn = { version = "2.0.101", features = ["full"] }

[features]
default = []
dev = []
